welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:8: error: reassignment to val
		j = j  - 1;setPos(i,j);ecritMessage(n);n = n + 1;
                  ^