welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
var x = getMondeHauteur();
var n = 0;
var z = getMondeLargeur;
var j = 0;

for (j <- 1 to x-1 ; i <- 0 to x-1 ){
		j = j  - 1;setPos(i,j);ecritMessage(n);n = n + 1;
	
}
}

